Troisième version du projet teamrocket
Ajout de la page d'affichage de l'evenement
Mise à jour de la base de donnée

--- a/WebContent/Header.html
+++ b/WebContent/Header.html
@@ -6,14 +6,7 @@
 </head>
 <body>
 
-<p style="text-align: center">Site de creation d'evenements</p>
-	
+<p style="text-align: center">Rocket!</p>
 
-	<p style="text-align: center">
-		
-	</p>
-	
-
-	
 </body>
 </html>
