--- a/WebContent/Footer.html
+++ b/WebContent/Footer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<p align="right"><em>Founded by Laetis, Alan, Bruno & Hamed</em></p>
+<img src="Images/logo.png" width="100" height="70" align="left"><p align="right"><em>Founded by Laetis, Alan, Bruno & Hamed</em></p>
 
 </body>
 </html>
